--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
   </header>
 
   <section id="featured-property">
+    <figure>
     <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-
+    <figcaption>345 Carl Street Apt. 12, Carroll Rd., Brooklyn, NY - Photo by Denise Richards</figcaption>
+   </figure>
       <!--
       foldername/ = go inside the folder.
       filename = use a file in the current folder.
